xbackbone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: xbackbone
  name: xbackbone
spec:
  rules:
    - host: images.cajun.pro
      http:
        paths:
          - backend:
              serviceName: xbackbone
              servicePort: 80
            path: /
  tls:
    - hosts:
        - images.cajun.pro
      secretName: images-cajun-pro
